# OverReacher

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  banners.txt  install.sh  overreacher.py  pyproject.toml  req.tmp  requirements-dev.txt  requirements.txt  run  setup.py
attacks/: attacks.json
core/: __init__.py  arguments.py  attacks.py  config.py  execute.py  utilities.py  visuals.py
data/: attacks.json  config.ini
overreacher/: __init__.py  __main__.py  arguments.py  attacks.py  config.py  execute.py  overreacher.py  setup.ini  version.py
overreacher/data/: config.ini
